docs: improve dnd docs

--- a/stories/core/Custom.stories.mdx
+++ b/stories/core/Custom.stories.mdx
@@ -23,7 +23,7 @@ components={{
 
 <Canvas>
   <Story
-    name="Custom month date header"
+    name="Month date header"
     args={{
       defaultView: Views.MONTH,
       views: [Views.MONTH],
@@ -54,7 +54,7 @@ components={{
 
 <Canvas>
   <Story
-    name="Custom week header"
+    name="Week header"
     args={{
       defaultView: Views.WEEK,
       views: [Views.WEEK],
@@ -85,7 +85,7 @@ components={{
 
 <Canvas>
   <Story
-    name="Custom eventWrapper"
+    name="eventWrapper"
     args={{
       defaultView: Views.DAY,
       events,
@@ -111,7 +111,7 @@ components={{
 
 <Canvas>
   <Story
-    name="Custom timeGutterHeader"
+    name="timeGutterHeader"
     args={{
       defaultView: Views.WEEK,
       views: [Views.WEEK, Views.DAY],
@@ -138,7 +138,7 @@ components={{
 
 <Canvas>
   <Story
-    name="Custom dateCellWrapper"
+    name="dateCellWrapper"
     args={{
       defaultView: Views.MONTH,
       views: [Views.MONTH],
@@ -165,7 +165,7 @@ components={{
 
 <Canvas>
   <Story
-    name="Custom timeSlotWrapper"
+    name="timeSlotWrapper"
     args={{
       defaultView: Views.WEEK,
       views: [Views.WEEK, Views.DAY],
