--- a/stories/core/DefaultView.stories.mdx
+++ b/stories/core/DefaultView.stories.mdx
@@ -6,7 +6,7 @@ import { events, Views, Calendar } from '../helpers';
 
 export const Template = props => <Calendar {...props} />;
 
-## `defaultView` prop
+## With `defaultView` prop
 
 The initial view set for the Calendar
 
