--- a/stories/core/MinMax.stories.mdx
+++ b/stories/core/MinMax.stories.mdx
@@ -7,7 +7,7 @@ import { events, Views, Calendar } from '../helpers';
 
 export const Template = props => <Calendar {...props} />;
 
-## `min`/`max` props
+## With `min`/`max` props
 
 Constrains the minimum/maximum _time_ of the Day and Week views
 
