--- a/stories/core/ViewsAsObject.stories.mdx
+++ b/stories/core/ViewsAsObject.stories.mdx
@@ -1,7 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
-import moment from 'moment';
 
-import { Calendar, Views, events } from '../helpers';
+import { Calendar, events } from '../helpers';
 
 <Meta title="Core/Views prop as object" component={Calendar} />
 
