chore(storybook): improve `eventWrapper` custom component

--- a/stories/core/AgendaNoEventsLabel.stories.mdx
+++ b/stories/core/AgendaNoEventsLabel.stories.mdx
@@ -20,7 +20,7 @@ export const Template = props => <Calendar {...props} />;
       },
     }}
     parameters={{
-      controls: { disabled: true },
+      controls: { disable: true },
     }}
   >
     {Template.bind({})}
