--- a/stories/core/DefaultView.stories.mdx
+++ b/stories/core/DefaultView.stories.mdx
@@ -18,7 +18,7 @@ The initial view set for the Calendar
       events,
     }}
     parameters={{
-      controls: { disabled: true },
+      controls: { disable: true },
     }}
   >
     {Template.bind({})}
