--- a/stories/core/ScrollToTime.stories.mdx
+++ b/stories/core/ScrollToTime.stories.mdx
@@ -20,7 +20,7 @@ Should stroll to 5:00am on calendar render
       events,
     }}
     parameters={{
-      controls: { disabled: true },
+      controls: { disable: true },
     }}
   >
     {Template.bind({})}
