--- a/stories/core/Custom.stories.mdx
+++ b/stories/core/Custom.stories.mdx
@@ -35,7 +35,7 @@ components={{
       },
     }}
     parameters={{
-      controls: { disabled: true },
+      controls: { disable: true },
     }}
   >
     {Template.bind({})}
@@ -66,7 +66,7 @@ components={{
       },
     }}
     parameters={{
-      controls: { disabled: true },
+      controls: { disable: true },
     }}
   >
     {Template.bind({})}
@@ -94,7 +94,7 @@ components={{
       },
     }}
     parameters={{
-      controls: { disabled: true },
+      controls: { disable: true },
     }}
   >
     {Template.bind({})}
@@ -121,7 +121,7 @@ components={{
       },
     }}
     parameters={{
-      controls: { disabled: true },
+      controls: { disable: true },
     }}
   >
     {Template.bind({})}
@@ -148,7 +148,7 @@ components={{
       },
     }}
     parameters={{
-      controls: { disabled: true },
+      controls: { disable: true },
     }}
   >
     {Template.bind({})}
@@ -175,7 +175,7 @@ components={{
       },
     }}
     parameters={{
-      controls: { disabled: true },
+      controls: { disable: true },
     }}
   >
     {Template.bind({})}
