chore(storybook): bump to v6.5

--- a/stories/Getting Started.stories.mdx
+++ b/stories/Getting Started.stories.mdx
@@ -1,12 +1,12 @@
-import { Meta, ArgsTable } from '@storybook/addon-docs/blocks';
+import { Meta, ArgsTable } from '@storybook/addon-docs';
 import { Calendar } from '../packages/core/src/components/Calendar';
 
-<Meta title="Getting Started" />
+<Meta title="Getting Started" component={Calendar} />
 
 # Getting Started
 
 An events calendar component built for React and made for modern browsers and
-uses flexbox over the classic tables-ception approach.
+uses flexbox over the classic tables-caption approach.
 
 ## Use and Setup
 
