--- a/stories/core/AgendaWithLength.stories.mdx
+++ b/stories/core/AgendaWithLength.stories.mdx
@@ -1,4 +1,4 @@
-import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
+import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 import demoEvents from '../helpers/events';
 import { Calendar, Views } from '../helpers';
