--- a/stories/core/GetNow.stories.mdx
+++ b/stories/core/GetNow.stories.mdx
@@ -1,4 +1,4 @@
-import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
+import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 import { Calendar, events } from '../helpers';
 
