--- a/stories/core/ScrollToTime.stories.mdx
+++ b/stories/core/ScrollToTime.stories.mdx
@@ -1,4 +1,4 @@
-import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
+import { Canvas, Meta, Story } from '@storybook/addon-docs';
 import moment from 'moment';
 
 import { Calendar, Views, events } from '../helpers';
