--- a/stories/dnd/DragAndDrop.stories.mdx
+++ b/stories/dnd/DragAndDrop.stories.mdx
@@ -1,4 +1,4 @@
-import { Canvas, Meta, Story, ArgsTable } from '@storybook/addon-docs/blocks';
+import { Canvas, Meta, Story, ArgsTable } from '@storybook/addon-docs';
 import { action } from '@storybook/addon-actions';
 
 import { useDragAndDrop } from '../../packages/dnd/src';
