--- a/stories/dnd/WithNonDefaultStepsAndTimeSlots.stories.mdx
+++ b/stories/dnd/WithNonDefaultStepsAndTimeSlots.stories.mdx
@@ -1,4 +1,4 @@
-import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
+import { Canvas, Meta, Story } from '@storybook/addon-docs';
 import { action } from '@storybook/addon-actions';
 
 import customComponents from '../helpers/customComponents';
