--- a/stories/core/AgendaNoEventsLabel.stories.mdx
+++ b/stories/core/AgendaNoEventsLabel.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-import { Calendar, Views, events } from '../helpers';
+import { Calendar, events } from '../helpers';
 
 <Meta title="Core/NoEventsInRange message" component={Calendar} />
 
@@ -12,7 +12,7 @@ export const Template = props => <Calendar {...props} />;
   <Story
     name="NoEventsInRange message"
     args={{
-      defaultView: Views.AGENDA,
+      defaultView: 'agenda',
       events: events,
       messages: {
         noEventsInRange:
