--- a/stories/core/Custom.stories.mdx
+++ b/stories/core/Custom.stories.mdx
@@ -1,7 +1,7 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 import customComponents from '../helpers/customComponents';
-import { events, Views, Calendar } from '../helpers';
+import { events, Calendar } from '../helpers';
 
 <Meta title="Core/Custom components" component={Calendar} />
 
@@ -25,8 +25,8 @@ components={{
   <Story
     name="Month date header"
     args={{
-      defaultView: Views.MONTH,
-      views: [Views.MONTH],
+      defaultView: 'month',
+      views: ['month'],
       events,
       components: {
         month: {
@@ -56,8 +56,8 @@ components={{
   <Story
     name="Week header"
     args={{
-      defaultView: Views.WEEK,
-      views: [Views.WEEK],
+      defaultView: 'week',
+      views: ['week'],
       events,
       components: {
         week: {
@@ -87,7 +87,7 @@ components={{
   <Story
     name="eventWrapper"
     args={{
-      defaultView: Views.DAY,
+      defaultView: 'day',
       events,
       components: {
         eventWrapper: customComponents.eventWrapper,
@@ -113,8 +113,8 @@ components={{
   <Story
     name="timeGutterHeader"
     args={{
-      defaultView: Views.WEEK,
-      views: [Views.WEEK, Views.DAY],
+      defaultView: 'week',
+      views: ['week', 'day'],
       events,
       components: {
         timeGutterHeader: CustomTimeGutter,
@@ -140,8 +140,8 @@ components={{
   <Story
     name="dateCellWrapper"
     args={{
-      defaultView: Views.MONTH,
-      views: [Views.MONTH],
+      defaultView: 'month',
+      views: ['month'],
       events,
       components: {
         dateCellWrapper: customComponents.dateCellWrapper,
@@ -167,8 +167,8 @@ components={{
   <Story
     name="timeSlotWrapper"
     args={{
-      defaultView: Views.WEEK,
-      views: [Views.WEEK, Views.DAY],
+      defaultView: 'week',
+      views: ['week', 'day'],
       events,
       components: {
         timeSlotWrapper: customComponents.timeSlotWrapper,
