--- a/stories/core/ScrollToTime.stories.mdx
+++ b/stories/core/ScrollToTime.stories.mdx
@@ -1,7 +1,7 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 import moment from 'moment';
 
-import { Calendar, Views, events } from '../helpers';
+import { Calendar, events } from '../helpers';
 
 <Meta title="Core/Scroll to time" component={Calendar} />
 
@@ -15,7 +15,7 @@ Should stroll to 5:00am on calendar render
   <Story
     name="Scroll to time"
     args={{
-      defaultView: Views.DAY,
+      defaultView: 'day',
       scrollToTime: moment('5:00am', 'h:mma').toDate(),
       events,
     }}
