--- a/stories/dnd/WithShowMultiDayTimes.stories.mdx
+++ b/stories/dnd/WithShowMultiDayTimes.stories.mdx
@@ -2,7 +2,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 import { action } from '@storybook/addon-actions';
 
 import customComponents from '../helpers/customComponents';
-import { DragAndDropCalendar, events, Views } from '../helpers';
+import { DragAndDropCalendar, events } from '../helpers';
 
 <Meta title="dnd/With showMultiDayTimes" component={DragAndDropCalendar} />
 
@@ -14,7 +14,7 @@ export const Template = props => <DragAndDropCalendar {...props} />;
   <Story
     name="With showMultiDayTimes"
     args={{
-      defaultView: Views.WEEK,
+      defaultView: 'week',
       showMultiDayTimes: true,
       events,
       onEventDrop: action('event dropped'),
